sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
 
  while(a!=false){
    var a=true
    for (i<- 0 to getNombreValeurs()-1){
    if(plusPetitQue(getValeur(i+1),getValeur(i))){
       echange(i,i+1)
       a=true
       
     }else{
       a=false
     }
   }
 }
}
 